# alphasim

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
alphasim/: allocation.py  backtest.py  capital.py  commission.py  const.py  money.py  portfolio.py  stats.py  util.py
tests/: test_alphasim.py  test_backtest.py  test_backtest_crypto.py  test_backtest_stonks.py  test_bench_backtest.py  test_portfolio.py
tests/data/: crypto_mask.csv  crypto_prices.csv  crypto_weights.csv  price_sample.csv  result_sample.csv  stonk_prices.csv  stonk_weights.csv  weight_sample.csv
vignettes/: backtest.ipynb  riskpremia.ipynb  riskpremia_erc.ipynb
