[metadata]
name = alphasim
version = 0.69
author = Rich Klee @ TCG
author_email=hello@thecolngroup.com
url = https://github.com/thecolngroup/alphasim
description = Minimalist backtester sympathetic to the quant process.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
